Introduce named tuul module and document release design